[package]
name = "dusk_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1"
winit = "0.30"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.11"
log = "0.4"
gltf = { version = "1.4", default-features = false, features = ["utils", "extras", "names"] }
image = { version = "0.25", default-features = false, features = ["png", "hdr"] }
anyhow = "1.0"
half = "2"
image_dds = { version = "0.7.2", default-features = false, features = ["ddsfile", "image"] }

[patch.crates-io]
gltf = { path = "vendor/gltf" }
